# python_uni

./: pyproject.toml
11lab/: 1_zadanie.py  2_zadanie.py  3_zadanie.py
2lab/: 2zadanie.py  2zadanie2.py  3zadanie3.py  4zadanie1.py  4zadanie2.py  5zadanie1.py  5zadanie2.py  5zadanie3.py  6zadanie1.py  6zadanie2.py
3lab/: 3lab.ipynb
3lab/.ipynb_checkpoints/: 3lab-checkpoint.ipynb
4lab/.ipynb_checkpoints/: 4lab-checkpoint.ipynb
5lab/.ipynb_checkpoints/: 5lab-checkpoint.ipynb
6lab/: namespaces.py  palindrome1.py  palindrome2.py  palindrome3.py
7lab/: dop.py  grade1.py  grade2.py  palyndrome_7-1.py  solutions.py
9lab/: 1_zadanie.py  2_zadanie.py  3_zadanie.py
lab8/: 1_zadanie.py  2_zadanie.py  3_zadanie.py  dop_2.py  dop_module.py
