[tool.poetry]
name = "python_funny"
version = "0.1.0"
description = ""
authors = ["devbaeb <huihuiich1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
nbconvert = "^6.4.2"
pandoc = "^2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
